--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
   <div class="nav_main">
     <div class="inner">
       <div class="d">
-        <a href="/service.html">
+        <a href="index.html">
           <h3>面面俱到</h3>
           <p>我们为您提供全套的品牌设计
             <br>解决方案</p>
         </a>
       </div>
       <div class="d">
-        <a href="/fxal.html">
+        <a href="case.html">
           <h3>别具匠心</h3>
           <p>闻道有先后，术业有专攻
             <br>超越自我，用更加精湛的技艺诠释您的需求</p>
         </a>
       </div>
       <div class="d">
-        <a href="/about.html">
+        <a href="about.html">
           <h3>持之以恒</h3>
           <p>从开始的那刻起
             <br>我们就不断的攀升，坚持我们的信念</p>
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div>
-  <div class="serv"><a href="#" target="_blank" class="a1"></a><a href="#" target="_blank" class="a2"><i></i><i></i><i></i></a></div>
+  <div class="serv"><a href="#" class="a1 mj-showmsg"></a><a href="#" class="a2 mj-showmsg"><i></i><i></i><i></i></a></div>
   <script src="common/js/fun.js"></script>
   <script src="common/js/global.js"></script>
   <script src="common/js/vivus.min.js"></script>
@@ -82,7 +82,7 @@
     </div>
   </div>
   <div class="serviceshadow"></div>
-  <div class="body" id="service"><a href="#" class="a_l"></a><a href="#" class="a_r"></a>
+  <div class="body" id="service"><a href="index.html" class="a_l"></a><a href="case.html" class="a_r"></a>
     <div class="main"><span class="bdr b1"></span><span class="bdr b2"></span><span class="bdr b3"></span><span class="bdr b4"></span>
       <div class="service rotate">
         <div class="nav_service"><span class="line"><span></span></span>
@@ -155,17 +155,18 @@
                 <div class="box1">
                   <h2>主题展馆</h2>
                   <h3>Theme Pavilions</h3>
-                  <h4>建立稳健的地基，推波助澜，以承载企业网络品牌持续性发展</h4>
+                  <h4>展馆设计是一项强调空间环境和道具形式的独立设计</h4>
                   <div class="text">
-                    <p>网站作为企业互联网品牌载体和营销工具，地基稳健</p>
-                    <p>决定企业网络化可持续性发展。分形以独创的作业体系，基于企业自身品牌战略和营销目标，结合互联网前端技术方式</p>
-                    <p>量身定制匹配的网站建设解决方案，以满足不同企业网络品牌可持续性发展</p>
+                    <p>展馆设计是一项强调空间环境和道具形式的独立设计职业，</p>
+                    <p>它是一种空间形态的构成。展示环境分为室内空间和室外空间。室内空间是以展品本位为出发点，</p>
+                    <p>在展示道具形式作用下的空间形态</p>
+                    <p>量身定制匹配的展馆设计解决方案，以满足不同企业品牌可持续性发展</p>
                   </div>
                   <div class="text2">
-                    <p>品牌官网、集团网站、营销型网站建设</p>
-                    <p>行业门户、社区网站建设</p>
-                    <p>HTML5网站建设</p>
-                    <p>网站定制、业务系统定制开发、平台整体解决方案</p>
+                    <p>党建基地、廉政文化展厅、反腐倡廉教育基地</p>
+                    <p>廉政教育展厅</p>
+                    <p>宣教室、荣誉室、档案室等</p>
+                    <p>校史室</p>
                   </div>
                 </div>
               </div>
@@ -177,18 +178,18 @@
                 <div class="box1">
                   <h2>景观规划</h2>
                   <h3>Landscape Planning</h3>
-                  <h4>通过稳定的架构，提供专业、完整、可扩展的全渠道大数据销售系统</h4>
+                  <h4>景观规划是指在区域的范围内进行的景观规划</h4>
                   <div class="text">
-                    <p>建立以客户为中心的完美购物体验，满足顾客的需求，真正打动客户</p>
-                    <p>后端复杂作业流程标准化</p>
-                    <p>精细化控制影响客户体验的每一个业务环节、流程，整合包括电商系统、供应链、服务体系等</p>
-                    <p>无缝整合企业线下线信息化系统，构建电子商务大平台概念</p>
+                    <p>景观规划是指在区域的范围内进行的景观规划，</p>
+                    <p>是从区域的角度，区域的基本特征和属性出发。</p>
+                    <p>现代景观规划设计包括视觉景观形象、环境生态绿化、大众行为心理三个方面的内容。</p>
+                    <p>景观规划设计秉承着以人为本体现博爱、尊重自然显露自然、保护资源节约资源等原则。</p>
                   </div>
                   <div class="text2">
-                    <p>B2C、B2B、B2B2C、C2B网站建设</p>
-                    <p>ERP系统、CRM系统建设集成</p>
-                    <p>微商城建设</p>
-                    <p>积分商城、众筹网站建设</p>
+                    <p>新型农庄、法制公园、两证公园等</p>
+                    <p>景区规划</p>
+                    <p>特色小镇</p>
+                    <p>主题街区、街道景观</p>
                   </div>
                 </div>
               </div>
@@ -200,17 +201,17 @@
                 <div class="box1">
                   <h2>环境导示</h2>
                   <h3>Viewing Guide</h3>
-                  <h4>多终端网络触点，让您的品牌触手可及</h4>
+                  <h4>与整个环境的相结合的环境导示设计，让您的品牌触手可及</h4>
                   <div class="text">
-                    <p>实用性，互动性，便捷性操作是移动端的基础核心要素</p>
-                    <p>分形在此基础之上，针对企业不同载体</p>
-                    <p>侧重品牌调性传递，交互体验设计，功能应用开发，营销活动转化等定制服务</p>
+                    <p>环境导示设计是传统建筑设计与视觉传达的中间学科</p>
+                    <p>它属于企业形象涉及方面的内容，即CIS中的VI里面的组成部分</p>
+                    <p>是结合环境与人之间的关系的信息界面，侧重品牌调性传递，营销活动转化等定制服务</p>
                     <p>传递目标价值</p>
                   </div>
                   <div class="text2">
-                    <p>手机网站建设</p>
-                    <p>微网站建设</p>
-                    <p>APP开发</p>
+                    <p>导示系统</p>
+                    <p>环境艺术</p>
+                    <p>院区文化</p>
                   </div>
                 </div>
               </div>
@@ -222,18 +223,18 @@
                 <div class="box1">
                   <h2>廊道文化</h2>
                   <h3>Corridor culture</h3>
-                  <h4>基于企业竞争特性，为企业定制网络投放策略</h4>
+                  <h4>良好的廊道文化是展示形象的一道风景线</h4>
                   <div class="text">
-                    <p>分形依托多年网络技术积累与客户服务经验，以结果为导向</p>
-                    <p>基于企业自身特性绘制网络广告投放路线图</p>
-                    <p>不局限于搜索引擎推广，微博微信，网络硬广，DSP等方式。降低推广浪费</p>
+                    <p>启一文化多年廊道文化设计积累与客户服务经验，以结果为导向</p>
+                    <p>基于企业自身特性绘制廊道设计解决方案</p>
+                    <p>不局限于大厅装饰、走廊文化、会议室文化、长廊文化等</p>
                     <p>只为企业营销更具效率与价值</p>
                   </div>
                   <div class="text2">
-                    <p>网络推广服务</p>
-                    <p>搜索引擎推广服务</p>
-                    <p>微信微博推广服务</p>
-                    <p>DSP精准营销</p>
+                    <p>大厅装饰</p>
+                    <p>走廊文化</p>
+                    <p>会议室文化</p>
+                    <p>长廊文化</p>
                   </div>
                 </div>
               </div>
@@ -245,18 +246,17 @@
                 <div class="box1">
                   <h2>多媒体技术</h2>
                   <h3>Multimedia Technology</h3>
-                  <h4>依托游戏的营销性，快速进行新老客户转换</h4>
+                  <h4>依托多媒体的营销性，快速进行新老客户转换</h4>
                   <div class="text">
-                    <p>无需下载任何插件</p>
-                    <p>基于HTML5技术的网页游戏场景更加丰富，并可以跨平台推广</p>
+                    <p>基于VR/AR技术的场景更加丰富，并可以跨平台推广</p>
                     <p>可集成会员激励机制，与企业现有会员系统相结合，轻松完成新客户的转化，拥有多年经验的策划团队</p>
-                    <p>可为您量身定制营销活动解决方案</p>
+                    <p>可为您量身定制多媒体设计解决方案</p>
                   </div>
                   <div class="text2">
-                    <p>互动营销服务</p>
-                    <p>游戏营销服务</p>
-                    <p>H5游戏</p>
-                    <p>H5场景应用</p>
+                    <p>声光电</p>
+                    <p>VR互动</p>
+                    <p>虚拟场景</p>
+                    <p>3D视觉</p>
                   </div>
                 </div>
               </div>
@@ -268,16 +268,17 @@
                 <div class="box1">
                   <h2>宣传用品</h2>
                   <h3>Propaganda Articles</h3>
-                  <h4>深度落地企业营销战略目标，助力企业网络品牌延伸，共创互联网商业价值</h4>
+                  <h4>深度落地企业营销战略目标，助力企业品牌延伸，共创商业价值</h4>
                   <div class="text">
                     <p>资源整合是商业核心竞争之一，企业营销战略目标的达成离不开优秀资源的支持</p>
-                    <p>从客户实际需求出发，基于分形对互联网的深度理解，循序渐进的落地企业互联网营销战略目标细化网络品牌的延伸</p>
+                    <p>从客户实际需求出发，基于启一对宣传用品的深度理解，循序渐进的落地企业营销战略目标细化品牌的延伸</p>
                     <p>秉承相互理解尊重的信念</p>
-                    <p>降低企业沟通成本和信任成本，共创企业互联网商业价值</p>
+                    <p>降低企业沟通成本和信任成本，共创企业商业价值</p>
                   </div>
                   <div class="text2">
-                    <p>网站代运营服务</p>
-                    <p>微信微博运营服务</p>
+                    <p>水晶杯、笔记本签字笔、宣传优盘等</p>
+                    <p>纸杯纸袋、抽纸靠垫等</p>
+                    <p>雨衣毛巾、不易餐具及生活用品</p>
                   </div>
                 </div>
               </div>
@@ -642,12 +643,27 @@
     }
     </style>
     <div class="right">
-      <div class="share bdsharebuttonbox"><a href="#" data-cmd="sqq" class="a1 bds_sqq"><i></i></a><a href="#" class="a2 bds_weixin" data-cmd="weixin"><i></i></a><a href="#" class="a3 bds_tsina" data-cmd="tsina"><i></i></a><a href="#" class="a4 bds_weixin" data-cmd="weixin"><i></i></a></div>
+      <div class="share bdsharebuttonbox"><a href="tencent://message/?uin=815969707&Site=&Menu-=yes" data-cmd="sqq" class="a1 bds_sqq"><i></i></a><a href="#" class="a2 bds_weixin mj-showwechat" data-cmd="weixin"><i></i></a><!-- <a href="#" class="a3 bds_tsina" data-cmd="tsina"><i></i></a><a href="#" class="a4 bds_weixin" data-cmd="weixin"><i></i></a> --></div>
     </div>
     <div style="width:300px;margin:0 auto; padding-left: 62px;">
       <a target="_blank" href="#" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#fff;">豫公网安备 xxxxxxxxxxxxx</p></a>
     </div>
   </div>
+  <section class="mj-mask"></section>
+  <section class="mj-cue">请输入手机号</section>
+  <section class="mj-msg">
+    <h6>留言给我们</h6>
+    <form action="#">
+      <input type="text" placeholder="请输入您的姓名">
+      <input type="tel" placeholder="请输入您的手机号(必填)">
+      <textarea placeholder="请输入您的需求"></textarea>
+      <input type="submit" value="提交">
+    </form>
+  </section>
+  <section class="mj-weichat">
+    <img src="common/image/ercode.png">
+    <h6>扫描二维码关注启一</h6>
+  </section>
 </body>
 
 </html>
