--- a/case.html
+++ b/case.html
@@ -33,21 +33,21 @@
   <div class="nav_main">
     <div class="inner">
       <div class="d">
-        <a href="/service.html">
+        <a href="index.html">
           <h3>面面俱到</h3>
           <p>我们为您提供全套的品牌设计
             <br>解决方案</p>
         </a>
       </div>
       <div class="d">
-        <a href="/fxal.html">
+        <a href="case.html">
           <h3>别具匠心</h3>
           <p>闻道有先后，术业有专攻
             <br>超越自我，用更加精湛的技艺诠释您的需求</p>
         </a>
       </div>
       <div class="d">
-        <a href="/about.html">
+        <a href="about.html">
           <h3>持之以恒</h3>
           <p>从开始的那刻起
             <br>我们就不断的攀升，坚持我们的信念</p>
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div>
-  <div class="serv"><a href="#" target="_blank" class="a1"></a><a href="#" target="_blank" class="a2"><i></i><i></i><i></i></a></div>
+  <div class="serv"><a href="#" class="a1 mj-showmsg"></a><a href="#" class="a2 mj-showmsg"><i></i><i></i><i></i></a></div>
   <script src="common/js/plus/jquery.nicescroll.min.js"></script>
   <script src="common/js/fun.js"></script>
   <script src="common/js/global.js"></script>
@@ -66,7 +66,7 @@
     </div>
   </div>
   <div class="caseshadow"></div>
-  <div class="body"><a href="#" class="a_l"></a><a href="#" class="a_r"></a>
+  <div class="body"><a href="index.html" class="a_l"></a><a href="case.html" class="a_r"></a>
     <div class="main"><span class="bdr b1"></span><span class="bdr b2"></span><span class="bdr b3"></span><span class="bdr b4"></span>
       <div class="case">
         <div class="svg">
@@ -509,7 +509,7 @@
     }
     </style>
     <div class="right">
-      <div class="share bdsharebuttonbox"><a href="#" data-cmd="sqq" class="a1 bds_sqq"><i></i></a><a href="#" class="a2 bds_weixin" data-cmd="weixin"><i></i></a><a href="#" class="a3 bds_tsina" data-cmd="tsina"><i></i></a><a href="#" class="a4 bds_weixin" data-cmd="weixin"><i></i></a></div>
+      <div class="share bdsharebuttonbox"><a href="tencent://message/?uin=815969707&Site=&Menu-=yes" data-cmd="sqq" class="a1 bds_sqq"><i></i></a><a href="#" class="a2 bds_weixin mj-showwechat" data-cmd="weixin"><i></i></a><!-- <a href="#" class="a3 bds_tsina" data-cmd="tsina"><i></i></a><a href="#" class="a4 bds_weixin" data-cmd="weixin"><i></i></a> --></div>
     </div>
     <div style="width:300px;margin:0 auto; padding-left: 62px;">
       <a target="_blank" href="#" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
@@ -517,6 +517,21 @@
       </a>
     </div>
   </div>
+  <section class="mj-mask"></section>
+  <section class="mj-cue">请输入手机号</section>
+  <section class="mj-msg">
+    <h6>留言给我们</h6>
+    <form action="#">
+      <input type="text" placeholder="请输入您的姓名">
+      <input type="tel" placeholder="请输入您的手机号(必填)">
+      <textarea placeholder="请输入您的需求"></textarea>
+      <input type="submit" value="提交">
+    </form>
+  </section>
+  <section class="mj-weichat">
+    <img src="common/image/ercode.png">
+    <h6>扫描二维码关注启一</h6>
+  </section>
 </body>
 
 </html>
