--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
       <div class="d">
         <p>©2014-2017 158ch.com
           <br>All Rights Reserved.
-          <br>豫ICP备xxxxxxxxxx号-x
+          <br>豫ICP备14021169号-7
           <br>
         </p>
       </div>
@@ -172,7 +172,7 @@
     <div class="m">
       <p><strong><a href="tel:0371-55611177">0371-55611177</a></strong>
         <br/>&copy;2014-2017 158ch.com
-        <br>豫ICP备 XXXXXXXX </p>
+        <br>豫ICP备14021169号-7</p>
     </div>
     <style type="text/css">
     .bdshare-button-style0-16 a,
@@ -184,8 +184,8 @@
     <div class="right">
       <div class="share bdsharebuttonbox"><a href="tencent://message/?uin=815969707&Site=&Menu-=yes" data-cmd="sqq" class="a1 bds_sqq"><i></i></a><a href="#" class="a2 bds_weixin mj-showwechat" data-cmd="weixin"><i></i></a><!-- <a href="#" class="a3 bds_tsina" data-cmd="tsina"><i></i></a><a href="#" class="a4 bds_weixin" data-cmd="weixin"><i></i></a> --></div>
     </div>
-    <div style="width:300px;margin:0 auto; padding-left: 62px;">
-      <a target="_blank" href="#" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#fff;">豫公网安备 xxxxxxxxxxxxx</p></a>
+    <div class="icp" style="width:300px;margin:0 auto; padding-left: 62px;">
+      <a target="_blank" href="#" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#fff;">豫ICP备14021169号-7</p></a>
     </div>
   </div>
   <section class="mj-mask"></section>
