--- a/case.html
+++ b/case.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
-  <title>启一科技</title>
+  <title>启一文化</title>
   <link href="common/css/global.css" rel="stylesheet" type="text/css" />
   <link href="common/css/fix.css" rel="stylesheet" type="text/css" />
   <script src="common/js/jquery-1.11.0.min.js"></script>
@@ -281,7 +281,7 @@
         doms += '</div>';
       }
       $('#mj_add_work_warp').html(doms);
-    }, 15000);
+    }, 3000);
 
   });
 
@@ -475,7 +475,7 @@
       <div class="d">
         <p>©2014-2017 158ch.com
           <br>All Rights Reserved.
-          <br>豫ICP备xxxxxxxxxx号-x
+          <br>豫ICP备14021169号-7
           <br>
         </p>
       </div>
@@ -499,7 +499,7 @@
     <div class="m">
       <p><strong><a href="tel:0371-55611177">0371-55611177</a></strong>
         <br/>&copy;2014-2017 158ch.com
-        <br>豫ICP备 XXXXXXXX </p>
+        <br>豫ICP备14021169号-7</p>
     </div>
     <style type="text/css">
     .bdshare-button-style0-16 a,
@@ -511,10 +511,8 @@
     <div class="right">
       <div class="share bdsharebuttonbox"><a href="tencent://message/?uin=815969707&Site=&Menu-=yes" data-cmd="sqq" class="a1 bds_sqq"><i></i></a><a href="#" class="a2 bds_weixin mj-showwechat" data-cmd="weixin"><i></i></a><!-- <a href="#" class="a3 bds_tsina" data-cmd="tsina"><i></i></a><a href="#" class="a4 bds_weixin" data-cmd="weixin"><i></i></a> --></div>
     </div>
-    <div style="width:300px;margin:0 auto; padding-left: 62px;">
-      <a target="_blank" href="#" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
-        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#fff;">豫公网安备 xxxxxxxxxxxxx</p>
-      </a>
+    <div class="icp" style="width:300px;margin:0 auto; padding-left: 62px;">
+      <a target="_blank" href="#" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#fff;">豫ICP备14021169号-7</p></a>
     </div>
   </div>
   <section class="mj-mask"></section>
